fix: blog status wrapping

--- a/Explorer/src/app/feature-modules/blog/blog-preview/blog-preview.component.css
+++ b/Explorer/src/app/feature-modules/blog/blog-preview/blog-preview.component.css
@@ -19,6 +19,7 @@
 .blog-title {
     padding-inline: 0.3rem;
     margin: 0;
+    text-wrap: nowrap;
 }
 
 .blog:hover {
@@ -172,6 +173,10 @@
     text-align: center;
     font-weight: 600;
     margin-left: 0.4rem;
+    max-height: 22px;
+    display: flex;
+    flex-wrap: nowrap;
+    min-width: max-content;
 }
 
 .draft-tag {
